# mtg-bot

./: .gitignore  Makefile  README.md  llamacpp.nix  pyproject.toml  requirements.txt  shell.nix
data/: .gitignore  MagicCompRules_20241108.txt.dvc  dvc.yaml  params.yaml
mtg_bot/: retrievers.py
mtg_bot/cli/: preprocess.py
mtg_bot/preprocessing/: mtg_rules.py
streamlit_apps/: dspy_inference.py
